Corrections and oss form

--- a/_includes/codeSchema.html
+++ b/_includes/codeSchema.html
@@ -3,7 +3,7 @@
     <details open>
         <summary>schemaVersion <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
         <h5>{{ site.SchemaVersion[page.lang] }}</h5>
-        <p>{{ site.SchemaVersionCodeDesc[page.lang] }}</p>
+        <p>{{ site.SchemaVersionDesc[page.lang] }}</p>
     </details>
     </li>
 
@@ -18,7 +18,7 @@
     <li>
     <details open>
         <summary>releases <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
-        <p>{{ site.RealeasesCodeDesc[page.lang] }}</p>
+        <p>{{ site.RealeasesDesc[page.lang] }}</p>
         <ul class="list-unstyled">
             <li>
             <details open>
@@ -46,7 +46,7 @@
                     <li>
                     <details open>
                         <summary>name [string]</summary>
-                        <h5>{{ site.NameContace[page.lang] }}</h5>
+                        <h5>{{ site.NameContact[page.lang] }}</h5>
                         <p>{{ site.NameContactDesc[page.lang] }}</p>
                     </details>
                     </li>
@@ -70,21 +70,21 @@
                     <details open>
                         <summary>created <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                         <h5>{{ site.Created[page.lang] }}</h5>
-                        <p>{{ site.CreatedCodeDesc[page.lang] }}</p>
+                        <p>{{ site.CreatedDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>lastModified [string]</summary>
                         <h5>{{ site.LastModified[page.lang] }}</h5>
-                        <p>{{ site.LastModifiedCodeDesc[page.lang] }}</p>
+                        <p>{{ site.LastModifiedDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>metadataLastUpdated <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</summary>
                         <h5>{{ site.LastUpdated[page.lang] }}</h5>
-                        <p>{{ site.MetaDataLastUpdatedCodeDesc[page.lang] }}</p>
+                        <p>{{ site.MetaDataLastUpdatedDesc[page.lang] }}</p>
                     </details>
                     </li>
                 </ul>
@@ -107,10 +107,10 @@
             <details open>
                 <summary>downloadURL [array]</summary>
                 <h5>{{ site.DownloadName[page.lang] }}</h5>
-                <p>{{ site.DownloadURLCodeDesc[page.lang] }}</p>
+                <p>{{ site.DownloadURLDesc[page.lang] }}</p>
                 <ul>
-                    <li>{{ site.DownloadURLCodeEN[page.lang] }} [string]</li>
-                    <li>{{ site.DownloadURLCodeFR[page.lang] }} [string]</li>
+                    <li>{{ site.DownloadURLEN[page.lang] }} [string]</li>
+                    <li>{{ site.DownloadURLFR[page.lang] }} [string]</li>
                 </ul>
             </details>
             </li>
@@ -132,7 +132,7 @@
             <details open>
                 <summary>languages [array]</summary>
                 <h5>{{ site.LanguagesName[page.lang] }}</h5>
-                <p>{{ site.LanguagesCodeDesc[page.lang] }}</p>
+                <p>{{ site.LanguagesDesc[page.lang] }}</p>
             </details>
             </li>
 
@@ -152,10 +152,10 @@
             <details open>
                 <summary>organization [array]</summary>
                 <h5>{{ site.OrganizationName[page.lang] }}</h5>
-                <p>{{ site.OrganizationCodeDesc[page.lang] }}</p>
+                <p>{{ site.OrganizationDesc[page.lang] }}</p>
                 <ul>
-                    <li>{{ site.OrganizationCodeEN[page.lang] }} [string]</li>
-                    <li>{{ site.OrganizationCodeFR[page.lang] }} [string]</li>
+                    <li>{{ site.OrganizationEN[page.lang] }} [string]</li>
+                    <li>{{ site.OrganizationFR[page.lang] }} [string]</li>
                 </ul>
             </details>
             </li>
@@ -163,34 +163,34 @@
             <li>
             <details open>
                 <summary>partners [array]</summary>
-                <p>{{ site.PartnersCodeDesc[page.lang] }}</p>
+                <p>{{ site.PartnersDesc[page.lang] }}</p>
                 <ul class="list-unstyled">
                     <li>
                     <details open>
                         <summary>URL [array]</summary>
                         <h5>{{ site.URLPartnersName[page.lang] }}</h5>
-                        <p>{{ site.URLPartnersCodeDesc[page.lang] }}</p>
+                        <p>{{ site.URLPartnersDesc[page.lang] }}</p>
                         <ul>
-                            <li>{{ site.URLPartnersCodeEN[page.lang] }} [string]</li>
-                            <li>{{ site.URLPartnersCodeFR[page.lang] }} [string]</li>
+                            <li>{{ site.URLPartnersEN[page.lang] }} [string]</li>
+                            <li>{{ site.URLPartnersFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>email [string]</summary>
-                        <h5>{{ site.EmailPartnersCode[page.lang] }}</h5>
-                        <p>{{ site.EmailPartnersCodeDesc[page.lang] }}</p>
+                        <h5>{{ site.EmailPartners[page.lang] }}</h5>
+                        <p>{{ site.EmailPartnersDesc[page.lang] }}</p>
                     </details>
                     </li>
                     <li>
                     <details open>
                         <summary>name [array]</summary>
                         <h5>{{ site.PartnersName[page.lang] }}</h5>
-                        <p>{{ site.NamePartnersCodeDesc[page.lang] }}</p>
+                        <p>{{ site.NamePartnersDesc[page.lang] }}</p>
                         <ul>
-                            <li>{{ site.NamePartnersCodeEN[page.lang] }} [string]</li>
-                            <li>{{ site.NamePartnersCodeFR[page.lang] }} [string]</li>
+                            <li>{{ site.NamePartnersEN[page.lang] }} [string]</li>
+                            <li>{{ site.NamePartnersFR[page.lang] }} [string]</li>
                         </ul>
                     </details>
                     </li>
@@ -229,10 +229,10 @@
             <details open>
                 <summary>repositoryURL <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
                 <h5>{{ site.RepositoryURLName[page.lang] }}</h5>
-                <p>{{ site.RepositoryURLCodeDesc[page.lang] }}</p>
+                <p>{{ site.RepositoryURLDesc[page.lang] }}</p>
                 <ul>
-                    <li>{{ site.RepositoryURLCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-                    <li>{{ site.RepositoryURLCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.RepositoryURLEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+                    <li>{{ site.RepositoryURLFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
                 </ul>
             </details>
             </li>
@@ -272,7 +272,7 @@
             <details open>
                 <summary>status [string]</summary>
                 <h5>{{ site.StatusName[page.lang] }}</h5>
-                <p>{{ site.StatusCodeDesc[page.lang] }}</p>
+                <p>{{ site.StatusDesc[page.lang] }}</p>
             </details>
             </li>
 
@@ -292,7 +292,7 @@
             <details open>
                 <summary>vcs [string]</summary>
                 <h5>{{ site.VcsName[page.lang] }}</h5>
-                <p>{{ site.VcsCodeDesc[page.lang] }}</p>
+                <p>{{ site.VcsDesc[page.lang] }}</p>
             </details>
             </li>
 
@@ -300,7 +300,7 @@
             <details open>
                 <summary>version [string]</summary>
                 <h5>{{ site.VersionName[page.lang] }}</h5>
-                <p>{{ site.VersionCodeDesc[page.lang] }}</p>
+                <p>{{ site.VersionDesc[page.lang] }}</p>
             </details>
             </li>
         </ul>
