--- a/_includes/ossSchema.html
+++ b/_includes/ossSchema.html
@@ -62,10 +62,10 @@
     <details open>
         <summary>name <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [array]</summary>
         <h5>{{ site.ProjectName[page.lang] }}</h5>
-        <p>{{ site.NameCodeDesc[page.lang] }}</p>
+        <p>{{ site.NameDesc[page.lang] }}</p>
         <ul>
-            <li>{{ site.NameCodeEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
-            <li>{{ site.NameCodeFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.NameEN[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
+            <li>{{ site.NameFR[page.lang] }} <span class="bg-primary">{{ site.MandatoryField[page.lang] }}</span> [string]</li>
         </ul>
     </details>
     </li>
@@ -184,27 +184,27 @@
                     <li>
                     <details open>
                         <summary>relatedCode [array]</summary>
-                        <p>{{ site.RelatedDesc[page.lang] }}</p>
+                        <p>{{ site.RelatedCodeDesc[page.lang] }}</p>
                         <ul class="list-unstyled">
                             <li>
                             <details open>
                                 <summary>URL [array]</summary>
-                                <h5>{{ site.URLRelatedName[page.lang] }}</h5>
-                                <p>{{ site.URLRelatedDesc[page.lang] }}</p>
+                                <h5>{{ site.URLRelatedCodeName[page.lang] }}</h5>
+                                <p>{{ site.URLRelatedCodeDesc[page.lang] }}</p>
                                 <ul>
-                                    <li>{{ site.URLRelatedEN[page.lang] }} [string]</li>
-                                    <li>{{ site.URLRelatedFR[page.lang] }} [string]</li>
+                                    <li>{{ site.URLRelatedCodeEN[page.lang] }} [string]</li>
+                                    <li>{{ site.URLRelatedCodeFR[page.lang] }} [string]</li>
                                 </ul>
                             </details>
                             </li>
                             <li>
                             <details open>
                                 <summary>name [array]</summary>
-                                <h5>{{ site.RelatedName[page.lang] }}</h5>
-                                <p>{{ site.NameRelatedDesc[page.lang] }}</p>
+                                <h5>{{ site.RelatedCodeName[page.lang] }}</h5>
+                                <p>{{ site.NameRelatedCodeDesc[page.lang] }}</p>
                                 <ul>
-                                    <li>{{ site.NameRelatedEN[page.lang] }} [string]</li>
-                                    <li>{{ site.NameRelatedFR[page.lang] }} [string]</li>
+                                    <li>{{ site.NameRelatedCodeEN[page.lang] }} [string]</li>
+                                    <li>{{ site.NameRelatedCodeFR[page.lang] }} [string]</li>
                                 </ul>
                             </details>
                             </li>
@@ -216,7 +216,7 @@
                     <details open>
                         <summary>status [string]</summary>
                         <h5>{{ site.StatusName[page.lang] }}</h5>
-                        <p>{{ site.StatusCodeDesc[page.lang] }}</p>
+                        <p>{{ site.StatusDesc[page.lang] }}</p>
                     </details>
                     </li>
                 </ul>
