Corrections and Open standards form

--- a/_includes/softwareForm.html
+++ b/_includes/softwareForm.html
@@ -27,3 +27,11 @@
   {% include form_status.html %}
 
   <!-- users -->
+
+  <button id="prbotSubmitSoftware" type="button" class="btn btn-primary">Submit</button>
+  <button id="softwareFormReset" type="reset" class="btn btn-default">Reset</button>
+
+  {% include form_submitAlert.html %}
+
+  </form>
+</div>
