added missing elements from forms and translations

--- a/_includes/openStandardsForm.html
+++ b/_includes/openStandardsForm.html
@@ -7,7 +7,29 @@
 
     {% include form_contactDescription.html %}
 
-    <!-- references -->
+    <h2>{{ site.ReferencesURL[page.lang] }}</h2>
+      <div class="form-group">
+        <label for="enReferencesURL" class="required">{{ site.ReferencesURLEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="enReferencesURL" name="enReferencesURL" type="url"required="required" />
+      </div>
+      <div class="form-group">
+        <label for="frReferencesURL" class="required">{{ site.ReferencesURLFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="frReferencesURL" name="frReferencesURL" type="url"required="required" />
+      </div>
+      <div class="form-group">
+        <label for="enReferencesName" class="required">{{ site.ReferencesNameEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="enReferencesName" name="ReferencesName" type="text"required="required" />
+      </div>
+      <div class="form-group">
+        <label for="frReferencesName" class="required">{{ site.ReferencesNameFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="frReferencesName" name="ReferencesName" type="text" required="required" />
+      </div>
+
+    <h2>{{ site.Status[page.lang] }}</h2>
+      <div class="form-group">
+        <label for="status" class="required">{{ site.statusValue[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="status" name="status" type="text"required="required" />
+      </div>
 
     {% include form_dateDescription.html created=true lastModified=false metadata=true %}
 
@@ -15,11 +37,27 @@
 
     {% include form_projectName.html %}
 
-    <!-- specURL -->
+    <h2>{{ site.specURL[page.lang] }}</h2>
+      <div class="form-group">
+        <label for="enSpecURL" class="required">{{ site.specURLEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="enSpecURL" name="enSpecURL" type="url" required="required"/>
+      </div>
+      <div class="form-group">
+        <label for="frSpecURL" class="required">{{ site.specURLFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="frSpecURL" name="frSpecURL" type="url" required="required"/>
+      </div>
 
-    <!-- standardCode -->
+    <h2>{{ site.StandardCode[page.lang] }}</h2>
+      <div class="form-group">
+        <label for="standardCode" class="required">{{ site.StandardCodeValue[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="standardCode" name="standardCode" type="text" required="required" />
+      </div>
 
-    <!-- standardsOrg -->
+    <h2>{{ site.StandardsOrg[page.lang] }}</h2>
+      <div class="form-group">
+        <label for="standardsOrg" class="required">{{ site.standardsOrgValue[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
+        <input class="form-control" id="standardsOrg" name="standardsOrg" type="text" required="required" />
+      </div>
 
   <button id="prbotSubmitStandard" type="button" class="btn btn-primary">Submit</button>
   <button id="standardFormReset" type="reset" class="btn btn-default">Reset</button>
