--- a/_includes/softwareForm.html
+++ b/_includes/softwareForm.html
@@ -49,6 +49,8 @@
       <input class="form-control" id="users" name="users" type="text" pattern="[A-Za-z\s]" />
     </div>
 
+  {% include form_submitterInfo.html %}
+
   <button id="prbotSubmitSoftware" type="button" class="btn btn-primary">Submit</button>
   <button id="softwareFormReset" type="reset" class="btn btn-default">Reset</button>
 
