--- a/_includes/form/contactDescription.html
+++ b/_includes/form/contactDescription.html
@@ -1,21 +1,15 @@
 <h2>{{ site.ContactDesc[page.lang] }}</h2>
-<div class="form-group">
-  <label for="enUrlContact">{{ site.URLContactEN[page.lang] }}</label>
-  <input class="form-control" id="enUrlContact" name="enUrlContact" type="url"/>
-</div>
-<div class="form-group">
-  <label for="frUrlContact">{{ site.URLContactFR[page.lang] }}</label>
-  <input class="form-control" id="frUrlContact" name="frUrlContact" type="url"/>
-</div>
-<div class="form-group">
-  <label for="emailContact" class="required" > {{ site.EmailContact[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-  <input class="form-control" id="emailContact" name="emailContact" type="email" required="required" />
-</div>
-<div class="form-group">
-  <label for="nameContact">{{ site.NameContact[page.lang] }}</label>
-  <input class="form-control" id="nameContact" name="nameContact" type="text" data-rule-names-en-fr="true" />
-</div>
-    <div class="form-group">
-  <label for="phone">{{ site.ContactPhone[page.lang] }}</label>
-  <input class="form-control" id="phone" name="phone" type="tel"  data-rule-custom-phone="true" />
-</div>
+{% capture enURLContactText %}{{ site.URLContactEN[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="enUrlContact" text=enURLContactText type="url" %}
+
+{% capture frURLContactText %}{{ site.URLContactFR[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="frUrlContact" text=frURLContactText type="url" %}
+
+{% capture emailContactText %}{{ site.EmailContact[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="emailContact" text=emailContactText type="url" required=true %}
+
+{% capture nameContactText %}{{ site.NameContact[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="nameContact" text=nameContactText rule="data-rule-names-en-fr" %}
+
+{% capture ContactPhoneText %}{{ site.ContactPhone[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="phone" text=ContactPhoneText type="tel" rule="data-rule-custom-phone" %}
