--- a/_includes/form/homepageURL.html
+++ b/_includes/form/homepageURL.html
@@ -1,9 +1,6 @@
 <h2>{{ site.HomepageURLDesc[page.lang] }}</h2>
-<div class="form-group">
-  <label for="enHomepageURL">{{ site.HomepageURLEN[page.lang] }}</label>
-  <input class="form-control" id="enHomepageURL" name="homepageURL" type="url"/>
-</div>
-<div class="form-group">
-  <label for="frHomepageURL">{{ site.HomepageURLFR[page.lang] }}</label>
-  <input class="form-control" id="frHomepageURL" name="homepageURL" type="url"/>
-</div>
+{% capture enHomepageURLENText %}{{ site.HomepageURLEN[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="enHomepageURL" text=enHomepageURLENText type="url" %}
+
+{% capture frHomepageURLENText %}{{ site.HomepageURLFR[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="frHomepageURL" text=frHomepageURLENText type="url" %}
