--- a/_includes/form/projectName.html
+++ b/_includes/form/projectName.html
@@ -1,9 +1,6 @@
 <h2>{{ site.NameDesc[page.lang] }}</h2>
-<div class="form-group">
-  <label for="enProjectName" class="required">{{ site.NameEN[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-  <input class="form-control" id="enProjectName" name="enProjectName" type="text" data-rule-alphanum-space-en-fr="true" required="required"/>
-</div>
-<div class="form-group">
-  <label for="frProjectName" class="required">{{ site.NameFR[page.lang] }} <strong class="required">({{ site.MandatoryField[page.lang] }})</strong></label>
-  <input class="form-control" id="frProjectName" name="frProjectName" type="text" data-rule-alphanum-space-en-fr="true" required="required"/>
-</div>
+{% capture enProjectNameText %}{{ site.NameEN[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="enProjectName" text=enProjectNameText required=true rule="data-rule-alphanum-space-en-fr" %}
+
+{% capture frProjectNameText %}{{ site.NameFR[page.lang] }} {% endcapture %}
+{% include form/components/input.html id="frProjectName" text=frProjectNameText required=true rule="data-rule-alphanum-space-en-fr" %}
