Build error fix

--- a/_includes/form/repoURL.html
+++ b/_includes/form/repoURL.html
@@ -1,6 +1,6 @@
 <h2>{{ site.RepositoryURLDesc[page.lang] }}</h2>
 {% capture enRepoUrlText %}{{ site.RepositoryURLEN[page.lang]}} {% endcapture %}
-{% include form/components/input.html id="enRepoUrl" text=enRepoUrlText type="url" required=true}
+{% include form/components/input.html id="enRepoUrl" text=enRepoUrlText type="url" required=true %}
 
 {% capture frRepoUrlText %}{{ site.RepositoryURLFR[page.lang]}} {% endcapture %}
-{% include form/components/input.html id="frRepoUrl" text=frRepoUrlText type="url" required=true}
+{% include form/components/input.html id="frRepoUrl" text=frRepoUrlText type="url" required=true %}
